fix save as feature

--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -760,7 +760,7 @@
 				<button type="submit" ng-click="updatePost()" class="btn btn-primary">
 					<span class="glyphicon glyphicon-pencil"></span> Cập nhật
 				</button>
-				<button type="button" class="btn btn-success">
+				<button type="button" ng-click="saveAs()" class="btn btn-success">
 					<span class="glyphicon glyphicon-floppy-saved"></span> Save As
 				</button>
 				<div class="pull-right">
