--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -326,7 +326,7 @@
 									<input type="text" class="input-form flexdatalist" ng-model="data.xa" id="render_wards" title="{{tooltips['xa']}}" name="xa" list="xa" required>
 									<datalist id="xa">
 										<option ng-repeat="ward in wards | customDistrict: id_huyen | orderBy:'name'" value="{{ward.id}}">{{ward.name}}</option>
-									</select>
+									</datalist>
 								</td>
 							</tr>
 							<tr>
@@ -771,26 +771,26 @@
 			</table>
 		</div>
 		<div style="height: 50px;"></div>
-	<div class="bottom-nav">
-		<center>
-			<button id="add-post" type="submit" class="btn btn-success">
-				<span class="glyphicon glyphicon-floppy-disk"></span>&nbsp;  Lưu mẫu
-			</button>
-			<button ng-click="saveCookies()" type="button" class="btn btn-success">
-				<span class="glyphicon glyphicon-save"></span>&nbsp; Lưu bản nháp
-			</button>
-			<button ng-click="getCookies()" type="button" class="btn btn-success">
-				<span class="glyphicon glyphicon-open"></span>&nbsp; Lấy lại bản nháp
-			</button>
-
-			<div class="pull-right">
-				<button id="back-to-top" type="button" class="btn btn-default">
-				<span class="glyphicon glyphicon-chevron-up"></span> Top
+		<div class="bottom-nav">
+			<center>
+				<button id="add-post" type="submit" class="btn btn-success">
+					<span class="glyphicon glyphicon-floppy-disk"></span>&nbsp;  Lưu mẫu
 				</button>
-			</div>
-		
-		</center>
-	</div>
-	</form>
+				<button ng-click="saveCookies()" type="button" class="btn btn-success">
+					<span class="glyphicon glyphicon-save"></span>&nbsp; Lưu bản nháp
+				</button>
+				<button ng-click="getCookies()" type="button" class="btn btn-success">
+					<span class="glyphicon glyphicon-open"></span>&nbsp; Lấy lại bản nháp
+				</button>
+
+				<div class="pull-right">
+					<button id="back-to-top" type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-chevron-up"></span> Top
+					</button>
+				</div>
+			
+			</center>
+		</div>
+		</form>
 </div>
 <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
