--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -326,7 +326,7 @@
 									<input type="text" class="input-form flexdatalist" ng-model="data.xa" id="render_wards" title="{{tooltips['xa']}}" name="xa" list="xa" required>
 									<datalist id="xa">
 										<option ng-repeat="ward in wards | customDistrict: id_huyen | orderBy:'name'" value="{{ward.id}}">{{ward.name}}</option>
-									</select>
+									</datalist>
 								</td>
 							</tr>
 							<tr>
