view user's email

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -79,7 +79,8 @@
                   'pending-user': 'Nhân viên'
                 }
               %>
-              <p class="text-muted text-center"><%= obj[profileUser.level] %></p>
+              <p class="text-muted text-center"><%= profileUser.username %></p>
+              <p class="text-primary text-center text-bold"><%= obj[profileUser.level] %></p>
               <br>
               <strong><i class="fa fa-book margin-r-5"></i> Mã đề tài</strong>
 
