change color of tag file input

--- a/app/asset/css/customfileinput/component.css
+++ b/app/asset/css/customfileinput/component.css
@@ -47,6 +47,7 @@
 
 .inputfile + label strong {
     color: #f1e5e6;
-    background-color: #d3394c;
+    /*background-color: #d3394c;*/
+    background-color: #794044;
     display: inline-block;
 }
