--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -17,8 +17,9 @@ body {
   position: relative;
   margin: 0;
   padding-bottom: 6rem;
+  padding-top: 60px;
   min-height: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: serif;
 }
 
 .coordinates{
@@ -60,6 +61,10 @@ body {
 .check-box:focus{
     outline: 0 none;
     box-shadow: none;
+}
+
+.select-date{
+    border-radius: 4px;
 }
 
 /*------------------customize checkbox---------------------*/
@@ -211,12 +216,12 @@ a.nav:hover{
 }
 
 .group > li > a{
-    background-color: #19C662;
+    background-color: #31708f;
     color: #fff;
 }
 
 .group > li > a:hover{
-   background-color: #f5f5f5;
+    background-color: #f5f5f5;
     color: #000;
 }
 
@@ -224,6 +229,9 @@ a.nav:hover{
 /*------------------END-FORM_DATA---------------------*/
 
 @media screen and (min-width : 992px){
+    .wrap-content{
+        width: 1130px;
+    }
     .map-detail{
         background-color: #F3F6F9;
         padding: 15px;
@@ -234,14 +242,14 @@ a.nav:hover{
         border-left: 1px solid #ddd;
     }
 
-    .input-form{
-        padding: 5px;
+/*    .input-form{
+        height: 25px;
+        padding: 4px 7px;
         border-color: #d2e3ae;
         border-radius: 4px;
         margin: 5px;
-        /*width: 300px;*/
         border: 1px solid #ccc;
-    }
+    }*/
 }
 
 @media screen and (max-width : 992px){
@@ -254,14 +262,13 @@ a.nav:hover{
         margin-right: auto;
         border-left: 1px solid #ddd;
     }
-    .input-form{
+/*    .input-form{
         padding: 5px;
         border-color: #d2e3ae;
         border-radius: 4px;
         margin: 5px;
-        /*width: 300px;*/
         border: 1px solid #ccc;
-    }
+    }*/
 }
 
 @media only screen and (max-width: 768px){
@@ -278,14 +285,13 @@ a.nav:hover{
         border-left: 1px solid #ddd;
     }
 
-    .input-form{
+/*    .input-form{
         padding: 5px;
         border-color: #d2e3ae;
         border-radius: 4px;
         margin: 5px;
-        /*width: 250px;*/
         border: 1px solid #ccc;
-    }
+    }*/
 }
 
 /*  480px hoặc nhỏ hơn */
@@ -297,14 +303,13 @@ a.nav:hover{
         border-left: 1px solid #ddd;
     }
 
-    .input-form{
+/*    .input-form{
         padding: 5px;
         border-color: #d2e3ae;
         border-radius: 4px;
         margin: 5px;
-        /*width: 200px;*/
         border: 1px solid #ccc;
-    }
+    }*/
 }
 
 /* --------------RESPONSIVE LAYOUT----------- */
@@ -315,7 +320,6 @@ a.nav:hover{
     width: 100%;
     bottom: 10px;
     padding: 5px;
-    /*right: 20px;*/
 }
 
 .toggle-nav {
