--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -10,73 +10,120 @@
 		</div>
 	</div>
 	<center><h2>Các mẫu vật đã đăng</h2></center>
-	<div class="dropdown" style="margin-left: 15px;">
-			<button class="btn btn-primary" style="margin-bottom: 10px; width: 300px;">Trích xuất file <b class="caret"></b></button>
-			<input type="hidden" name="link" ng-bind="link" id="input" class="form-control" value="">
-			<div class="dropdown-content" ng-controller="ExportFileController" style="width: 300px;">
-			    <a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
-			    <a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
-			    <a ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</a>
-			    <a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> Xuất zip</a>
-			</div>
-		</div>
-	<button class="btn btn-success" style="cursor: pointer; margin-bottom: 10px; width: 300px; margin-left: 15px;" ng-click="selectAll()"><span class="glyphicons glyphicons-ok"></span> Select all</button>
-	<table id="managerpost" class="table table-hover">
+	<table id="managerpost" class="table table-hover table-bordered">
+		<thead>
+			<tr>
+				<th colspan="6">
+					<div class="dropdown">
+						<button class="btn btn-primary">Trích xuất file <b class="caret"></b></button>
+						<input type="hidden" name="link" ng-bind="link" id="input" class="form-control" value="">
+						<div class="dropdown-content" ng-controller="ExportFileController">
+					    	<a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
+					    	<a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
+					    	<a ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</a>
+					    	<a ng-click="export('zip')"><span class="glyphicon glyphicon-download"></span> Xuất zip</a>
+						</div>
+					</div>
+					<button class="btn btn-success" style="cursor: pointer" ng-click="selectAll()"><span class="glyphicons glyphicons-ok"></span> Select all</button>
+					<!-- <div class="btn-group" data-toggle="buttons">
+						<label class="btn btn-success active">
+							<input type="checkbox" ng-model="selectall" ng-click="selectAll()">
+							<span class="glyphicon glyphicon-ok" ng-click="selectAll()"></span>
+						</label>
+					</div> -->
+				</th>
+			</tr>
+		</thead>
 		<thead>
 			<tr>
 				<th>Tên mẫu vật</th>
 				<th>Tên người lập phiếu</th>
 				<th>Thông tin cơ bản</th>
 				<th>Ngày đăng</th>
+				<th>Trạng thái</th>
 				<th>Hành động</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr ng-repeat="(key, post) in data">
 				<td>
-					<input type="checkbox" class="check-box" ng-model="post.selected" data-id='/content/{{link}}/{{post._id}}?display='>
+					<input type="checkbox" class="check-box" style="margin: 0px;" ng-model="post.selected" data-id='/content/{{link}}/{{post._id}}?display='>
 					<a style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html"><span class="label label-info">{{post.tenVietNam ? post.tenVietNam : 'Mẫu vật'}}</span></a>
 				</td>
 				<td>
 					{{post.nguoiLapPhieuMauVat ? post.nguoiLapPhieuMauVat : 'Chưa có tên'}}
 				</td>
 				<td>
-					<span>Người thu mẫu: </span>{{post.nguoiThuMau}} </br>
-
+					<span>Người thu mẫu: </span>{{post.nguoiThuMau}}				
+				</td>
+				<td>
+					{{post.created_at | date: "yyyy-MM-dd hh:mm:ss"}}
+				</td>
+				<td>
 					<label class="label label-{{post.fApproved ? 'success' : 'warning'}}">{{post.fApproved ? ' Đã phê duyệt' : ' Chưa phê duyệt'}}</label>
 				</td>
 				<td>
-					{{post.created_at | date: "dd-MM-yyyy hh:mm:ss"}}</br>
-				</td>
-				<td>
-					<div class="dropdown">
-						<button class="dropbtn" style="width: 180px;">Action <b class="caret"></b></button>
-						<div class="dropdown-content" ng-if="link == 'dong-vat'" ng-controller="ModalCtrl">
-							<a ng-if="restricted.restrict.dongvat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
-							<a ng-if="restricted.restrict.dongvat.edit" ui-sref = "chinh-sua-dong-vat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<a ng-if="restricted.restrict.dongvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-						</div>
-						<div class="dropdown-content" ng-if="link == 'thuc-vat'" ng-controller="ModalCtrl">
-							<a ng-if="restricted.restrict.thucvat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
-							<a ng-if="restricted.restrict.thucvat.edit" ui-sref = "chinh-sua-thuc-vat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<a ng-if="restricted.restrict.thucvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-						</div>
-						<div class="dropdown-content" ng-if="link == 'co-sinh'" ng-controller="ModalCtrl">
-							<a ng-if="restricted.restrict.cosinh.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
-							<a ng-if="restricted.restrict.cosinh.edit" ui-sref = "chinh-sua-co-sinh({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<a ng-if="restricted.restrict.cosinh.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-						</div>
-						<div class="dropdown-content" ng-if="link == 'tho-nhuong'" ng-controller="ModalCtrl">
-							<a ng-if="restricted.restrict.thonhuong.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
-							<a ng-if="restricted.restrict.thonhuong.edit" ui-sref = "chinh-sua-tho-nhuong({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<a ng-if="restricted.restrict.thonhuong.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-						</div>
-						<div class="dropdown-content" ng-if="link == 'dia-chat'" ng-controller="ModalCtrl">
-							<a ng-if="restricted.restrict.diachat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
-							<a ng-if="restricted.restrict.diachat.edit" ui-sref = "chinh-sua-dia-chat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<a ng-if="restricted.restrict.diachat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-						</div>
+					<div ng-if="link == 'dong-vat'" ng-controller="ModalCtrl">
+						<button data-toggle="popover" data-trigger="hover" data-content="{{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}" class="btn btn-{{post.fApproved ? 'info' : 'warning'}} btn-xs" ng-if="restricted.restrict.dongvat.approve" ng-click="approvePost(post._id, post.fApproved)">
+							<i class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></i>
+						</button>
+						<button data-toggle="popover" data-trigger="hover" data-content="Chỉnh sửa" class="btn btn-xs btn-success" ng-if="restricted.restrict.dongvat.edit" ui-sref= "chinh-sua-dong-vat({id : post._id})">
+							<i class="glyphicon glyphicon-edit"></i>
+						</button>
+						<button data-toggle="popover" data-trigger="hover" data-content="Xoá mẫu"  class="btn btn-xs btn-danger" ng-if="restricted.restrict.dongvat.delete" ng-click="showModal(post._id, link)">
+							<i class="glyphicon glyphicon-trash"></i>
+						</button>
 					</div>
+
+					<div ng-if="link == 'thuc-vat'" ng-controller="ModalCtrl">
+						<button ng-if="restricted.restrict.thucvat.approve" ng-click="approvePost(post._id, post.fApproved)" data-toggle="popover" data-trigger="hover" data-content="{{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}" class="btn btn-{{post.fApproved ? 'info' : 'warning'}} btn-xs">
+							<i class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></i> 
+						</button>
+
+						<button ng-if="restricted.restrict.thucvat.edit" ui-sref = "chinh-sua-thuc-vat({id : post._id})" data-toggle="popover" data-trigger="hover" data-content="Chỉnh sửa" class="btn btn-xs btn-success">
+							<i class="glyphicon glyphicon-edit"></i>
+						</button>
+						<button ng-if="restricted.restrict.thucvat.delete" ng-click="showModal(post._id, link)" data-toggle="popover" data-trigger="hover" data-content="Xoá mẫu vật" class="btn btn-xs btn-danger">
+							<i class="glyphicon glyphicon-trash"></i>
+						</button>
+					</div>
+
+					<div ng-if="link == 'co-sinh'" ng-controller="ModalCtrl">
+						<button ng-if="restricted.restrict.cosinh.approve" ng-click="approvePost(post._id, post.fApproved)" data-toggle="popover" data-trigger="hover" data-content="{{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}" class="btn btn-{{post.fApproved ? 'info' : 'warning'}} btn-xs">
+							<i class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></i>
+						</button>
+						<button ng-if="restricted.restrict.cosinh.edit" ui-sref = "chinh-sua-co-sinh({id : post._id})" data-toggle="popover" data-trigger="hover" data-content="Chỉnh sửa" class="btn btn-xs btn-success">
+							<i class="glyphicon glyphicon-edit"></i>
+						</button>
+						<button ng-if="restricted.restrict.cosinh.delete" ng-click="showModal(post._id, link)" data-toggle="popover" data-trigger="hover" data-content="Xoá mẫu vật" class="btn btn-xs btn-danger">
+							<i class="glyphicon glyphicon-trash"></i>
+						</button>
+					</div>
+
+					<div ng-if="link == 'tho-nhuong'" ng-controller="ModalCtrl">
+						<button ng-if="restricted.restrict.thonhuong.approve" ng-click="approvePost(post._id, post.fApproved)" data-toggle="popover" data-trigger="hover" data-content="{{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}" class="btn btn-{{post.fApproved ? 'info' : 'warning'}} btn-xs">
+							<i class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></i>
+						</button>
+						<button ng-if="restricted.restrict.thonhuong.edit" ui-sref = "chinh-sua-tho-nhuong({id : post._id})" data-toggle="popover" data-trigger="hover" data-content="Chỉnh sửa" class="btn btn-xs btn-success">
+							<i class="glyphicon glyphicon-edit"></i>
+						</button>
+						<button ng-if="restricted.restrict.thonhuong.delete" ng-click="showModal(post._id, link)" data-toggle="popover" data-trigger="hover" data-content="Xoá mẫu vật" class="btn btn-xs btn-danger">
+							<i class="glyphicon glyphicon-trash"></i>
+						</button>
+					</div>
+
+					<div ng-if="link == 'dia-chat'" ng-controller="ModalCtrl">
+						<button ng-if="restricted.restrict.diachat.approve" ng-click="approvePost(post._id, post.fApproved)" data-toggle="popover" data-trigger="hover" data-content="{{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}" class="btn btn-{{post.fApproved ? 'info' : 'warning'}} btn-xs">
+							<i class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></i>
+						</button>
+						<button ng-if="restricted.restrict.diachat.edit" ui-sref = "chinh-sua-dia-chat({id : post._id})" data-toggle="popover" data-trigger="hover" data-content="Chỉnh sửa" class="btn btn-xs btn-success">
+							<i class="glyphicon glyphicon-edit"></i>
+						</button>
+						<button ng-if="restricted.restrict.diachat.delete" ng-click="showModal(post._id, link)" data-toggle="popover" data-trigger="hover" data-content="Xoá mẫu vật" class="btn btn-xs btn-danger">
+							<i class="glyphicon glyphicon-trash"></i>
+						</button>
+					</div>
+					<!-- </div> -->
 				</td>
 			</tr>
 		</tbody>
@@ -130,7 +177,7 @@
 <script src="/admin/plugins/datatables/jquery.dataTables.min.js"></script>
 <script src="/admin/plugins/datatables/dataTables.bootstrap.min.js"></script>
 
-<script>
+<!-- <script>
 	$(document).ready(function () {
 		setTimeout(function(){
 			$('#managerpost').DataTable({
@@ -167,4 +214,12 @@
 			}).order([3, 'desc']).draw();
 		}, 1000);
 	});
+</script> -->
+
+<script type="text/javascript">
+	$(document).ready(function () {
+		setTimeout(function (argument) {
+			$('[data-toggle="popover"]').popover();
+		}, 500)
+	})
 </script>
