done instant-upload BE

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -1,5 +1,6 @@
 <!-- <div style="margin-top: 20px;" bs-loading-overlay bs-loading-overlay-delay="200"> -->
 	<form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
+		<input type="hidden" name="randomStr" value="2f41bc570ba88480a3269a7fd17b8da9">
 		<center><h3>Thêm mẫu dữ liệu động vật > Đề tài: {{maDeTai}} </h3></center>
 		<div class="container wrap-content">
 			<ul class="nav nav-tabs group tabs">
