--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -7,7 +7,7 @@
 				<tr>
 					<td><label >Mã đề tài <span class="has-required">(*)</span>: </label></td>
 					<td>
-						<input type="text" name="maDeTai" disabled="true" ng-model="maDeTai" class="input-form" required>
+						<input type="text" name="maDeTai" disabled="true" ng-model="maDeTai" class="input-form" >
 					</td>
 				</tr>
 			</table>
@@ -21,11 +21,11 @@
 				</tr>
 				<tr>
 					<td><label>02. Số hiệu bảo tàng cơ sở <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text"  title="{{tooltips['soHieuBaoTangCS']}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
+					<td><input type="text"  title="{{tooltips['soHieuBaoTangCS']}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>03. Số hiệu thực địa <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text"  title="{{tooltips['soHieuThucDia']}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
+					<td><input type="text"  title="{{tooltips['soHieuThucDia']}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" ></td>
 				</tr>
 
 				<tr>
@@ -65,7 +65,7 @@
 				</tr>
 				<tr>
 					<td><label>09. Tên Việt Nam (phổ thông):</label></td>
-					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['tenVietNam']}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>10. Tên địa phương:</label></td>
@@ -190,7 +190,7 @@
 				</tr>
 				<tr>
 					<td><label>17. Tình trạng mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['tinhTrangMau']}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['tinhTrangMau']}}" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td colspan="2"><label>18. Thông tin khác: </label></td>
@@ -214,11 +214,11 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 				<tr>
 					<td><label>19. Thời gian thu mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" class="input-form datepicker" id="thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" required></td>
+					<td><input type="text" class="input-form datepicker" id="thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" ></td>
 				</tr>
 				<tr>
 					<td><label>20. Người thu mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['nguoiThuMau']}}" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['nguoiThuMau']}}" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>21. Cơ quan thu mẫu: </label></td>
@@ -226,7 +226,7 @@
 				</tr>
 				<tr>
 					<td><label>22. Phương pháp thu mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['phuongPhapThuMau']}}" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['phuongPhapThuMau']}}" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" ></td>
 				</tr>
 				<tr><td colspan="2"><label>23. Địa điểm thu mẫu: </label></td></tr>
 				<tr>
@@ -262,7 +262,7 @@
 							<tr>
 								<td>Huyện<span ng-show="star" class="has-required"> (*)</span>:</td>
 								<td>
-									<input type="text" class="input-form flexdatalist" title="{{tooltips['huyen']}}" id="render_districts" name="huyen" list="huyen" required ng-model= "data.huyen" ng-change="districtChange()">
+									<input type="text" class="input-form flexdatalist" title="{{tooltips['huyen']}}" id="render_districts" name="huyen" list="huyen"  ng-model= "data.huyen" ng-change="districtChange()">
 									<datalist id="huyen">
 										<option ng-repeat="district in districts | customCity: id_tinh | orderBy: 'name'" id="{{district.name}}" value="{{district.id}}">{{district.name}}</option>
 									</datalist>
@@ -271,7 +271,7 @@
 							<tr>
 								<td>Xã<span ng-show="star" class="has-required"> (*)</span>: </td>
 								<td>
-									<input type="text" class="input-form flexdatalist" ng-model="data.xa" id="render_wards" title="{{tooltips['xa']}}" name="xa" list="xa" required>
+									<input type="text" class="input-form flexdatalist" ng-model="data.xa" id="render_wards" title="{{tooltips['xa']}}" name="xa" list="xa" >
 									<datalist id="xa">
 										<option ng-repeat="ward in wards | customDistrict: id_huyen | orderBy:'name'" value="{{ward.id}}">{{ward.name}}</option>
 									</select>
@@ -294,7 +294,7 @@
 				<tr>
 					<td>Vĩ độ N <span class="has-required">(*)</span>:</td>
 					<td>
-						<input type="text" id="dms" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form" required>
+						<input type="text" id="dms" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form" >
 						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
 							<input type="number" step="1" ng-model= "vido_do" ng-change="latChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model= "vido_phut" ng-change="latChange()" class = "coordinates" name=""> phút
@@ -305,7 +305,7 @@
 				<tr>
 					<td>Kinh độ E <span class="has-required">(*)</span>:</td>
 					<td>
-						<input type="text" id="dms" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" required>
+						<input type="text" id="dms" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form" >
 						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
 							<input type="number" step="1" ng-model="kinhdo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model="kinhdo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
@@ -315,12 +315,12 @@
 				</tr>
 				<tr>
 					<td><label>25. Thông tin về dự án, đề tài đợt thu nhập mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['thongTinDuAn']}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['thongTinDuAn']}}" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>26. Ghi chép thực địa <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<textarea ng-model="data.ghiChepThucDia" title="{{tooltips['ghiChepThucDia']}}" name="ghiChepThucDia" class="input-form" rows="3" required></textarea>
+						<textarea ng-model="data.ghiChepThucDia" title="{{tooltips['ghiChepThucDia']}}" name="ghiChepThucDia" class="input-form" rows="3" ></textarea>
 					</td>
 				</tr>
 				<tr>
@@ -356,19 +356,19 @@
 				</tr>
 				<tr>
 					<td><label>30. Người phân tích/giám định/định loại mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['nguoiGiamDinh']}}" name="nguoiGiamDinh" ng-model="data.nguoiGiamDinh" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['nguoiGiamDinh']}}" name="nguoiGiamDinh" ng-model="data.nguoiGiamDinh" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>31. Cơ quan/tổ chức phân tích/giám định/phân loại mẫu <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['coQuanToChucGiamDinh']}}" name="coQuanToChucGiamDinh" ng-model="data.coQuanToChucGiamDinh" id="coQuanToChucGiamDinh" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['coQuanToChucGiamDinh']}}" name="coQuanToChucGiamDinh" ng-model="data.coQuanToChucGiamDinh" id="coQuanToChucGiamDinh" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>32. Tài liệu phân tích/giám định/phân loại đi kèm <span class="has-required">(*)</span>:</label></td>
 				</tr>
 				<tr>
-						<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips['taiLieuPhanTichStr']}}" name="taiLieuPhanTichStr" class="input-form" required></td>
+						<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips['taiLieuPhanTichStr']}}" name="taiLieuPhanTichStr" class="input-form" ></td>
 					<td>
-						<input type="file" id="taiLieuPhanTichFile" multiple ng-model="data.taiLieuPhanTichFile" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="inputfile customfile" data-multiple-caption="{count} file is selected" max-file-size="10" required>
+						<input type="file" id="taiLieuPhanTichFile" multiple ng-model="data.taiLieuPhanTichFile" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="inputfile customfile" data-multiple-caption="{count} file is selected" max-file-size="10" >
 						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>No file chosen</span><strong>Open</strong></label>
 				</td>
 				</tr>
@@ -378,7 +378,7 @@
 				<tr>
 					<td><input type="text" title="{{tooltips['phanTichQuangHocStr']}}" name="phanTichQuangHocStr" ng-model="data.phanTichQuangHocStr" class="input-form"></td>
 					<td>
-						<input type="file" id="phanTichQuangHocFile" multiple accept=".doc, .docx, .pdf" name="phanTichQuangHocFile" ng-model="data.phanTichQuangHocFile" class="inputfile customfile" data-multiple-caption="{count} file is selected" max-file-size="10" required>
+						<input type="file" id="phanTichQuangHocFile" multiple accept=".doc, .docx, .pdf" name="phanTichQuangHocFile" ng-model="data.phanTichQuangHocFile" class="inputfile customfile" data-multiple-caption="{count} file is selected" max-file-size="10" >
 						<label for="phanTichQuangHocFile" title="{{tooltips['phanTichQuangHocFile']}}"><span>No file chosen</span><strong>Open</strong></label>
 					</td>
 				</tr>
@@ -435,7 +435,7 @@
 				<tr>
 					<td><label>39. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<input type="file" multiple id="anhMauVat" ng-model="data.anhMauVat" name="anhMauVat" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept="image/*" max-file-size="10" required>
+						<input type="file" multiple id="anhMauVat" ng-model="data.anhMauVat" name="anhMauVat" class="inputfile customfile" data-multiple-caption="{count} file is selected" accept="image/*" max-file-size="10" >
 						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>No file chosen</span><strong>Open</strong></label>
 					</td>
 				</tr>
@@ -524,7 +524,7 @@
 				<tr>
 					<td><label>45. Loại mẫu <span class="has-required">(*)</span>:</label></td>
 					<td>
-						<select required class="select-box" title="{{tooltips['loaiMau']}}" name="loaiMau">
+						<select  class="select-box" title="{{tooltips['loaiMau']}}" name="loaiMau">
 							<option value=""></option>
 							<option value="Mẫu đá">Mẫu đá </option>
 							<option value="Mẫu khoáng vật">Mẫu khoáng vật</option>
@@ -534,11 +534,11 @@
 				</tr>
 				<tr>
 					<td><label>46. Hình dáng mẫu, dạng tồn tại <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['hinhDangMauTonTai']}}" name="hinhDangMauTonTai" ng-model="data.hinhDangMauTonTai" required id="hinhDangMauTonTai" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['hinhDangMauTonTai']}}" name="hinhDangMauTonTai" ng-model="data.hinhDangMauTonTai"  id="hinhDangMauTonTai" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>47. Màu sắc <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['mauSac']}}" name="mauSac" ng-model="data.mauSac" required id="mauSac" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['mauSac']}}" name="mauSac" ng-model="data.mauSac"  id="mauSac" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>48. Phân loại sử dụng mẫu:</label></td>
@@ -554,11 +554,11 @@
 				</tr>
 				<tr>
 					<td><label>49. Thành phần khoáng vật <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['thanhPhanKhoangVat']}}" name="thanhPhanKhoangVat" ng-model="data.thanhPhanKhoangVat" required class="input-form"></td>
+					<td><input type="text" title="{{tooltips['thanhPhanKhoangVat']}}" name="thanhPhanKhoangVat" ng-model="data.thanhPhanKhoangVat"  class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>50. Tính chất vật lý <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['tinhChatVatLy']}}" name="tinhChatVatLy" ng-model="data.tinhChatVatLy" required id="tinhChatVatLy" class="input-form"></td>
+					<td><input type="text" title="{{tooltips['tinhChatVatLy']}}" name="tinhChatVatLy" ng-model="data.tinhChatVatLy"  id="tinhChatVatLy" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>51. Công thức hóa học:</label></td>
@@ -580,7 +580,7 @@
 					<td><label>53. Phân bố Việt Nam <span class="has-required">(*)</span>:</label></td>
 				</tr>
 				<tr>
-						<td><input type="text" ng-model="data.phanBoVietNamStr" class="input-form" title="{{tooltips['phanBoVietNamStr']}}" name="phanBoVietNamStr" required></td>
+						<td><input type="text" ng-model="data.phanBoVietNamStr" class="input-form" title="{{tooltips['phanBoVietNamStr']}}" name="phanBoVietNamStr" ></td>
 					<td>
 						<input type="file" multiple ng-model="data.phanBoVietNamFile" class="inputfile customfile" data-multiple-caption="{count} file is selected" id="phanBoVietNamFile" name ="phanBoVietNamFile">
 						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>No file chosen</span><strong>Open</strong></label>
@@ -715,7 +715,7 @@
 				</tr>
 				<tr>
 					<td><label>68. Người lập phiếu mẫu vật <span class="has-required">(*)</span>:</label></td>
-					<td><input type="text" title="{{tooltips['nguoiLapPhieuMauVat']}}" name="nguoiLapPhieuMauVat" ng-model="data.nguoiLapPhieuMauVat" class="input-form" required></td>
+					<td><input type="text" title="{{tooltips['nguoiLapPhieuMauVat']}}" name="nguoiLapPhieuMauVat" ng-model="data.nguoiLapPhieuMauVat" class="input-form" ></td>
 				</tr>
 				<tr>
 					<td><label>69. Người nhập thông tin vào phần mềm:</label></td>
