fix all form ui

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -282,7 +282,7 @@
                     <input type="radio" name="fViTriToaDo" value="false" ng-click="dd()"><span class="label label-default"> DD</span>
                 </div>
 
-                <div class="container-fluid">
+                <div class="container-fluid col-sm-12">
                     <div class="col-sm-6">
                         Vĩ độ N <span class="has-required">(*)</span>:
                         <input type="text" id="dms" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control" required>
